2006-06-05 01:46 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.h: Added classes.nib loading and
	saving method declarations.
	* GormCore/GormClassManager.m: Added classes.nib loading and 
	saving method implementations.
	* GormCore/GormDocument.h: Add NSObject to id declaration for 
	container ivar.
	* GormCore/GormDocument.m: Minor cleanup. 
	* GormCore/GormProtocol.h: Minor cleanup.

2006-06-04 22:11 Gregory John Casamento <greg_casamento@yahoo.com>

	* ChangeLog
	* English.lproj/GormDocument.gorm
	* English.lproj/Gorm.gorm
	* GormCore/GModelDecoder.m
	* GormCore/GNUmakefile
	* GormCore/GormClassManager.h
	* GormCore/GormClassManager.m
	* GormCore/GormDocument.h
	* GormCore/GormDocument.m
	* GormCore/GormFilePrefsManager.h
	* GormCore/GormFilePrefsManager.m
	* GormCore/GormFilesOwner.m
	* GormCore/GormImageEditor.m
	* GormCore/GormImage.h
	* GormCore/GormImage.m
	* GormCore/GormProtocol.h
	* GormCore/GormResource.h
	* GormCore/GormResource.m
	* GormCore/GormSound.h
	* GormCore/GormSound.m
	* GormCore/GormViewWithContentViewEditor.m
	* GormInfo.plist
	* GormLib/IBDocuments.h
	* GormLib/IBPalette.m
	* Gorm.m
	* Palettes/0Menus/GormNSMenu.m
	* Palettes/1Windows/GormNSWindow.m
	* Version: Merged from NibCompatibility branch.

2006-06-03 11:44 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Add GormDocumentController as delegate
	to Gorm.
	* GormCore/GormDocumentController.m: Comment.
	* GormCore/GormDocument.h: Comments and containerClass declaration.
	* GormCore/GormDocument.m: containerClass implementation and use.
	* GormLib/IBDocuments.h: More descriptive comment.
	* GormLib/IBPalette.m: Remove IBPaletteDocument, since this is
	not used.
	* Gorm.m: Remove applicationShouldTerminate, since it is handled
	by GormDocumentController as the app delegate.

2006-06-01 23:06 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormInfo.plist: Correct NSName entries.
