@@ -186,7 +186,9 @@
       }
     }
 
-  // [doc touch];
+  // set the filetype and touch the document.
+  [doc setFileType: @"GSGormFileType"];
+  [doc touch];
 }
 
 @end
